--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/styles.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/styles.xml
@@ -1,17 +1,15 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="CustomToolbarStyle" parent="Base.Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
+
+        <!-- Status bar color -->
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
-    <!-- Both of these are needed -->
-    <item name="windowActionBar">false</item>
-    <item name="windowNoTitle">true</item>
-    </style>
+
 
 </resources>
