--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/styles.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="CustomToolbarStyle" parent="Base.Theme.AppCompat.Light.DarkActionBar">
+    <style name="CustomToolbarStyle" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
 
@@ -9,7 +9,5 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
-
 
 </resources>
