--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/styles.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/styles.xml
@@ -10,4 +10,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="CustomToolbarStyle.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="CustomToolbarStyle.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
