--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout-v21/pager_item.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout-v21/pager_item.xml
@@ -3,7 +3,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
@@ -11,7 +10,7 @@
 
     <ImageButton
         android:id="@+id/slide_image"
-        android:background="@android:color/transparent"
+        android:background="?android:selectableItemBackgroundBorderless"
         android:layout_width="179dp"
         android:layout_height="189dp"
         android:layout_marginBottom="8dp"
@@ -33,7 +32,7 @@
 
     <TextView
         android:id="@+id/slide_heading"
-        android:layout_width="76dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -47,7 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slide_image"
-        app:layout_constraintVertical_bias="0.065" />
+        app:layout_constraintTop_toTopOf="@+id/slide_image"
+        app:layout_constraintVertical_bias="0.682" />
 
 </android.support.constraint.ConstraintLayout>
