--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_cactus.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_cactus.xml
@@ -4,6 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.CactusActivity">
+    tools:context=".activities.CactusActivity"
+    tools:layout_editor_absoluteY="25dp">
+
+    <include
+        android:id="@+id/plant_screen_toolbar"
+        layout="@layout/plant_screen_toolbar"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
