--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/colors.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorImgPressed">#a9c3f9cd</color>
+    <color name="colorLightGreen">#04802a</color>
+
 </resources>
