--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/plant_screen_toolbar.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/plant_screen_toolbar.xml
@@ -10,15 +10,16 @@
     app:contentInsetEnd="0dp">
 
     <ImageButton
-        android:contentDescription="@string/app_name"
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
-        android:background="@android:color/transparent"
-        android:layout_height="50dp"
-        android:adjustViewBounds="true"
-        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="7dp"
         android:layout_marginStart="7dp"
-        android:layout_marginLeft="7dp" />
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/app_name"
+        android:cropToPadding="false"
+        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
 
     <TextView
         android:layout_width="wrap_content"
