--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_plant.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_plant.xml
@@ -55,7 +55,7 @@
 
     <ImageView
         android:id="@+id/imageDrop"
-        android:layout_width="130dp"
+        android:layout_width="133dp"
         android:layout_height="342dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -70,6 +70,24 @@
         app:layout_constraintTop_toTopOf="@+id/plant_screen_toolbar"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/drop" />
+
+    <TextView
+        android:id="@+id/textWaterValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.225"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/plant_screen_toolbar"
+        app:layout_constraintVertical_bias="0.415" />
 
 </android.support.constraint.ConstraintLayout>
 
