--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <LinearLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
-      android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/sample_main_layout">
@@ -19,7 +20,9 @@
         android:id="@+id/sample_content_fragment"
         android:layout_weight="2"
         android:layout_width="match_parent"
-        android:layout_height="0px"/>
+        android:layout_height="0px">
+
+    </FrameLayout>
 
 </LinearLayout>
 
