--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_plant.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_plant.xml
@@ -54,7 +54,7 @@
         app:layout_constraintVertical_bias="0.982" />
 
     <ImageView
-        android:id="@+id/imageDrop"
+        android:id="@+id/image_drop"
         android:layout_width="42dp"
         android:layout_height="32dp"
         android:layout_marginBottom="8dp"
@@ -86,7 +86,8 @@
         app:layout_constraintBottom_toTopOf="@+id/light_value"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+        app:layout_constraintTop_toBottomOf="@+id/progressBar">
+    </TextView>
 
     <TextView
         android:id="@+id/temperature_value"
@@ -176,12 +177,12 @@
         android:id="@+id/textViewHealth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -190,5 +191,22 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.112" />
 
+    <ImageView
+        android:id="@+id/alert_plant"
+        android:layout_width="36dp"
+        android:layout_height="31dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/light_value"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/water_value"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar"
+        app:layout_constraintVertical_bias="0.323"
+        app:srcCompat="@drawable/alert" />
 </android.support.constraint.ConstraintLayout>
 
