Trying to add navigation sidebar

--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,17 @@
-<LinearLayout
-      xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout
+      android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/sample_main_layout">
+
+
+
+
 
     <include
         android:id="@+id/mainScreenToolbar"
@@ -24,5 +31,14 @@
 
     </FrameLayout>
 
+   <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:menu="@layout/navigation_menu"
+        android:layout_gravity="start"
+        />
+
 </LinearLayout>
+</android.support.v4.widget.DrawerLayout>
 
