--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/main_screen_toolbar.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/main_screen_toolbar.xml
@@ -9,14 +9,14 @@
     app:contentInsetRight="0dp"
     app:contentInsetEnd="0dp">
 
-    <ImageView
+   <!-- <ImageView
         android:contentDescription="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:adjustViewBounds="true"
         android:src="@mipmap/ic_launcher"
         android:layout_marginStart="7dp"
-        android:layout_marginLeft="7dp" />
+        android:layout_marginLeft="7dp" /> -->
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,4 +26,7 @@
         android:textColor="@color/colorWhite"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp" />
+
+
+
 </android.support.v7.widget.Toolbar>
