--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/styles.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/styles.xml
@@ -8,6 +8,9 @@
         <!-- Status bar color -->
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
     </style>
 
     <style name="CustomToolbarStyle.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
