--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -1,43 +1,45 @@
+
+
 <android.support.v4.widget.DrawerLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:context=".activities.MainActivity">
+
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:menu="@menu/navigation_menu"
+        android:layout_gravity="start">
+    </android.support.design.widget.NavigationView>
+
 <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/sample_main_layout">
 
+    <include android:id="@+id/mainScreenToolbar"
+    layout="@layout/main_screen_toolbar"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
 
 
 
+<View
+    android:id="@+id/view"
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:background="@android:color/darker_gray" />
 
-    <include
-        android:id="@+id/mainScreenToolbar"
-        layout="@layout/main_screen_toolbar" />
+<FrameLayout
+    android:id="@+id/sample_content_fragment"
+    android:layout_weight="2"
+    android:layout_width="match_parent"
+    android:layout_height="0px">
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
-
-    <FrameLayout
-        android:id="@+id/sample_content_fragment"
-        android:layout_weight="2"
-        android:layout_width="match_parent"
-        android:layout_height="0px">
-
-    </FrameLayout>
-
-   <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:menu="@layout/navigation_menu"
-        android:layout_gravity="start"
-        />
+</FrameLayout>
 
 </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
