--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/main_screen_toolbar.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/main_screen_toolbar.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.Toolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,7 +11,7 @@
     app:contentInsetRight="0dp"
     app:contentInsetEnd="0dp">
 
-   <!-- <ImageView
+    <!--<ImageView
         android:contentDescription="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
@@ -25,7 +27,7 @@
         android:textSize="@dimen/toolbar_title_size"
         android:textColor="@color/colorWhite"
         android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp" />
+        android:layout_marginLeft="10dp"/>
 
 
 
