--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/menu/navigation_menu.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/menu/navigation_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    <menu xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <item android:id = "@+id/nav_profilet"
@@ -11,4 +10,4 @@
 
     <item android:id = "@+id/nav_logout"
         android:title = "Logout" />
-</android.support.constraint.ConstraintLayout>
+    </menu>
