--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,6 @@
       android:layout_height="match_parent"
       android:id="@+id/sample_main_layout">
 
-
-
-
-
     <include
         android:id="@+id/mainScreenToolbar"
         layout="@layout/main_screen_toolbar" />
@@ -31,13 +27,13 @@
 
     </FrameLayout>
 
-   <android.support.design.widget.NavigationView
+   <!--<android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:menu="@layout/navigation_menu"
         android:layout_gravity="start"
-        />
+        />-->
 
 </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
