--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/navigation_header.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/navigation_header.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="160dp"
-    android:background="@drawable/navigation_header_background"
+    android:background="@color/colorPrimary"
     android:padding="20dp">
 
     <ImageView
