Added water button + warning icon

--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/colors.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="colorImgPressed">#a9c3f9cd</color>
     <color name="colorLightGreen">#04802a</color>
     <color name="colorDarkGreen">#347235</color>
+    <color name="colorLightBlue">#00bfff</color>
 
 </resources>
